[tool.poetry]
name = "warpley-ai-gen"
version = "0.1.0"
description = "Generates AI Vids for Warpley"
authors = ["Jonny Johnson jonny@dialogues.ai", "Dylan Daniels dylan@bookpulishing.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
openai = "^1.50.1"
fastapi = "^0.115.2"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
websockets = "^13.1"
beautifulsoup4 = "4.12.3"
requests = "^2.32.3"
transformers = "^4.49.0"
torch = "2.3.0"
textblob = "^0.19.0"
spacy = "^3.8.4"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"